--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,19 @@
     "dependencies": {
         "@prisma/client": "^5.9.0",
         "cors": "^2.8.5",
+        "dockerode": "^4.0.9",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
+        "node-cron": "^4.2.1",
+        "proxmox-api": "^1.1.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
+        "@types/dockerode": "^4.0.1",
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.5",
+        "@types/node-cron": "^3.0.11",
         "eslint": "^8.56.0",
         "prisma": "^5.9.0",
         "tsx": "^4.7.0",
