--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,19 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - QDRANT_URL=${QDRANT_URL}
+      - DATABASE_URL=postgresql://copilot:${POSTGRES_PASSWORD:-changeme}@postgres:5432/homelab_copilot
+      - QDRANT_URL=http://qdrant:6333
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
-      - OLLAMA_HOST=${OLLAMA_HOST}
-      - OLLAMA_MODEL=${OLLAMA_MODEL}
+      - OLLAMA_HOST=${WINGMAN_OLLAMA_HOST:-http://host.docker.internal:11434}
+      - OLLAMA_API_KEY=${OLLAMA_API_KEY}
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen2.5:7b}
       - PROXMOX_HOST=${PROXMOX_HOST}
       - PROXMOX_USER=${PROXMOX_USER}
       - PROXMOX_TOKEN_NAME=${PROXMOX_TOKEN_NAME}
       - PROXMOX_TOKEN_VALUE=${PROXMOX_TOKEN_VALUE}
-      - PROXMOX_VERIFY_SSL=${PROXMOX_VERIFY_SSL}
+      - PROXMOX_VERIFY_SSL=${PROXMOX_VERIFY_SSL:-false}
       - NODE_ENV=${NODE_ENV:-development}
     depends_on:
       postgres:
@@ -25,8 +26,7 @@ services:
       qdrant:
         condition: service_started
     volumes:
-      - ./backend:/app
-      - /app/node_modules
+      - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
@@ -38,7 +38,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
       POSTGRES_DB: homelab_copilot
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -51,8 +51,8 @@ services:
   qdrant:
     image: qdrant/qdrant:latest
     ports:
-      - "6333:6333"
-      - "6334:6334"
+      - "6343:6333"
+      - "6344:6334"
     volumes:
       - qdrant_data:/qdrant/storage
     restart: unless-stopped
