--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
         condition: service_started
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./backend-py/app:/app/app
       - ./knowledge:/app/knowledge
     extra_hosts:
       - "host.docker.internal:host-gateway"
