--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "description": "Privacy-forward infrastructure copilot for homelabs",
   "workspaces": [
-    "backend",
     "frontend"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend\"",
-    "build": "npm run build -w backend && npm run build -w frontend",
-    "lint": "npm run lint -w backend && npm run lint -w frontend",
-    "test": "npm run test -w backend",
+    "dev": "docker compose up",
+    "dev:frontend": "npm run dev -w frontend",
+    "build": "npm run build -w frontend",
+    "lint": "npm run lint -w frontend",
     "setup": "bash infra/setup.sh"
   },
   "devDependencies": {
