--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,18 @@ npm-debug.log*
 .DS_Store
 Thumbs.db
 
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+
 # Test coverage
 coverage/
 
