Swap alerting integrations and add opensearch config

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,39 @@ BACKEND_PORT=3001
 NODE_ENV=development
 
 # =============================================================================
+# OpenTelemetry
+# =============================================================================
+OTEL_ENDPOINT=
+OTEL_SERVICE_NAME=homelab-copilot-backend
+
+# =============================================================================
+# Logging Sinks
+# =============================================================================
+NTFY_URL=
+NTFY_TOPIC=
+GOTIFY_URL=
+GOTIFY_TOKEN=
+SYSLOG_HOST=
+SYSLOG_PORT=514
+
+# =============================================================================
+# Alerting
+# =============================================================================
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+SMTP_TO=
+DISCORD_WEBHOOK_URL=
+SLACK_WEBHOOK_URL=
+MATRIX_WEBHOOK_URL=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+MAKE_WEBHOOK_URL=
+PLANE_WEBHOOK_URL=
+
+# =============================================================================
 # Frontend
 # =============================================================================
 NEXT_PUBLIC_API_URL=http://localhost:3001
