--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,10 @@ docker>=7.0.0
 proxmoxer>=2.0.0
 apscheduler>=3.10.0
 qdrant-client>=1.7.0
+opentelemetry-api>=1.26.0
+opentelemetry-sdk>=1.26.0
+opentelemetry-exporter-otlp>=1.26.0
+opentelemetry-instrumentation-fastapi>=0.47b0
+opentelemetry-instrumentation-httpx>=0.47b0
+opentelemetry-instrumentation-sqlalchemy>=0.47b0
+PyYAML>=6.0.1
