LLM Provider Abstraction & Settings UI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,12 @@ services:
     ports:
       - "3000:3000"
     environment:
+      # Client-side fetches use localhost (browser -> host)
       - NEXT_PUBLIC_API_URL=http://localhost:8000
+      # SSR/server-side fetches use internal Docker network
+      - INTERNAL_API_URL=http://backend:8000
+    depends_on:
+      - backend
 
   qdrant:
     image: qdrant/qdrant:latest
