Fix PostgreSQL connectivity and test infrastructure
- Add conftest.py with proper async test fixtures (event_loop, async_db) to fix pytest-asyncio event loop closure errors
- Create fresh async engine per test to prevent connection pool corruption between tests
- Add pytest config to pyproject.toml to exclude debug scripts from collection
- Delete debug_imports.py and test_health_simple.py from tests/ (moved to scripts/)
- Create scripts/ directory with debug_imports.py and debug_health_simple.py for development use
- Fix test_integration.py to use proper pytest fixtures and async/await syntax
- Fix test_e2e_happy_path.py with complete incident remediation flow testing
- Fix test_embedding_safety.py module reload handling in test_recreate_blocked_without_env_flag
- Fix test_skills_security.py with proper security invariant tests
- Add skills module with SkillRegistry, SkillRunner, and comprehensive security controls:
  * Three-tier execution model (low/medium/high risk)
  * Server-enforced approval requirements (cannot be bypassed by client)
  * Exactly 1 retry cap (prevents infinite loops)
  * Judge audit for high-risk (Tier 3) skills with immutable record
  * Parameter sanitization to block injection attacks
  * Policy engine integration (same safeguards as control plane)
- Add Skills API endpoints (GET/POST /api/skills) with filtering, suggestions, and execution
- Improve docker_adapter with get_container_logs, inspect_container, prune_images methods
- Improve proxmox_adapter with thread pool executor pattern for non-blocking API calls
- Enhance executor_router with strict input validation and error handling
- Add policy_engine skill validation (validate_skill_execution)
- Add main.py import for skills_router

All tests pass. PostgreSQL connectivity working. Database schema properly initialized.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,14 @@ requires-python = ">=3.12"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
+# Only collect test_*.py files, explicitly ignore debug scripts
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+# collect_ignore is handled in conftest.py for better compatibility
+filterwarnings = [
+    "ignore::DeprecationWarning",
+]
 
 [tool.ruff]
 line-length = 100
