Remove default Ollama host in compose

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       PROXMOX_PASSWORD: ${PROXMOX_PASSWORD:-}
       PROXMOX_TOKEN_NAME: ${PROXMOX_TOKEN_NAME:-}
       PROXMOX_VERIFY_SSL: ${PROXMOX_VERIFY_SSL:-false}
-      OLLAMA_HOST: ${OLLAMA_HOST:-http://host.docker.internal:11434}
+      OLLAMA_HOST: ${OLLAMA_HOST:-}
       OLLAMA_MODEL: ${OLLAMA_MODEL:-qwen2.5:7b}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
