--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
-      - OLLAMA_HOST=${WINGMAN_OLLAMA_HOST:-http://host.docker.internal:11434}
+      - OLLAMA_HOST=${WINGMAN_OLLAMA_HOST:-}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen2.5:7b}
       - PROXMOX_HOST=${PROXMOX_HOST}
       - PROXMOX_USER=${PROXMOX_USER}
