--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://copilot:${POSTGRES_PASSWORD:-changeme}@postgres:5432/homelab_copilot
       QDRANT_URL: http://qdrant:6333
-      EXECUTION_MODE: ${EXECUTION_MODE:-lab}
-      WINGMAN_EXECUTION_MODE: ${WINGMAN_EXECUTION_MODE:-lab}
+      EXECUTION_MODE: ${EXECUTION_MODE:-integration}
+      WINGMAN_EXECUTION_MODE: ${WINGMAN_EXECUTION_MODE:-${EXECUTION_MODE:-integration}}
       AUTH_ENABLED: ${AUTH_ENABLED:-true}
+      ALLOW_CLOUD_LLM: ${ALLOW_CLOUD_LLM:-false}
       WINGMAN_AUTH_SECRET: ${WINGMAN_AUTH_SECRET:-}
       WINGMAN_CONTAINER_ALLOWLIST: ${WINGMAN_CONTAINER_ALLOWLIST:-}
       WINGMAN_VM_ALLOWLIST: ${WINGMAN_VM_ALLOWLIST:-}
