--- a/.env.example
+++ b/.env.example
@@ -2,30 +2,28 @@
 # Copy this file to .env and fill in your values
 
 # =============================================================================
-# API Keys (at least one cloud provider recommended)
+# Database (Required)
 # =============================================================================
-OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-OPENROUTER_API_KEY=
+POSTGRES_PASSWORD=changeme
 
 # =============================================================================
-# Local LLM (Ollama)
+# LLM Providers (Optional - choose at least one)
 # =============================================================================
+# Local LLM via Ollama (recommended for privacy)
 OLLAMA_HOST=http://host.docker.internal:11434
 OLLAMA_MODEL=qwen2.5:7b
 
-# =============================================================================
-# Database
-# =============================================================================
-DATABASE_URL=postgresql://copilot:CHANGE_ME@postgres:5432/homelab_copilot
+# Cloud LLM Providers (optional - requires ALLOW_CLOUD_LLM=true)
+# Only one is needed if using cloud
+OPENROUTER_API_KEY=
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+
+# Enable cloud LLM providers (default: false for privacy)
+ALLOW_CLOUD_LLM=false
 
 # =============================================================================
-# Qdrant Vector Store
-# =============================================================================
-QDRANT_URL=http://qdrant:6333
-
-# =============================================================================
-# Proxmox Connection
+# Proxmox Connection (Optional)
 # =============================================================================
 PROXMOX_HOST=
 PROXMOX_USER=
@@ -34,45 +32,75 @@ PROXMOX_TOKEN_VALUE=
 PROXMOX_VERIFY_SSL=false
 
 # =============================================================================
-# Backend
+# Execution Mode
 # =============================================================================
-BACKEND_PORT=3001
-NODE_ENV=development
+# Options: mock (testing), integration (local docker), lab (production)
+EXECUTION_MODE=integration
+
+# Allowlists for LAB mode (comma-separated container/VM names)
+WINGMAN_CONTAINER_ALLOWLIST=
+WINGMAN_VM_ALLOWLIST=
+WINGMAN_NODE_ALLOWLIST=
 
 # =============================================================================
-# OpenTelemetry
+# Security
 # =============================================================================
+# Enable authentication (recommended for production)
+AUTH_ENABLED=false
+AUTH_SECRET_KEY=
+
+# Dangerous operations require explicit opt-in
+WINGMAN_ALLOW_DANGEROUS_OPS=false
+WINGMAN_READ_ONLY=false
+
+# =============================================================================
+# OpenTelemetry (Optional)
+# =============================================================================
+# Leave empty to disable OTLP export
 OTEL_ENDPOINT=
 OTEL_SERVICE_NAME=homelab-copilot-backend
 
 # =============================================================================
-# Logging Sinks
+# Notifications (Optional - configure any channels you want)
 # =============================================================================
-NTFY_URL=
-NTFY_TOPIC=
-GOTIFY_URL=
-GOTIFY_TOKEN=
-SYSLOG_HOST=
-SYSLOG_PORT=514
+# Discord
+DISCORD_WEBHOOK_URL=
 
-# =============================================================================
-# Alerting
-# =============================================================================
+# Slack
+SLACK_WEBHOOK_URL=
+
+# Telegram
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+
+# Matrix
+MATRIX_WEBHOOK_URL=
+
+# Email (SMTP)
 SMTP_HOST=
 SMTP_PORT=587
 SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=
 SMTP_TO=
-DISCORD_WEBHOOK_URL=
-SLACK_WEBHOOK_URL=
-MATRIX_WEBHOOK_URL=
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
+
+# Ntfy
+NTFY_URL=
+NTFY_TOPIC=
+
+# Gotify
+GOTIFY_URL=
+GOTIFY_TOKEN=
+
+# Make.com / Plane
 MAKE_WEBHOOK_URL=
 PLANE_WEBHOOK_URL=
 
+# Syslog
+SYSLOG_HOST=
+SYSLOG_PORT=514
+
 # =============================================================================
-# Frontend
+# Debug
 # =============================================================================
-NEXT_PUBLIC_API_URL=http://localhost:3001
+DEBUG=false
