--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,7 @@ opentelemetry-instrumentation-fastapi>=0.47b0
 opentelemetry-instrumentation-httpx>=0.47b0
 opentelemetry-instrumentation-sqlalchemy>=0.47b0
 PyYAML>=6.0.1
+jinja2>=3.1.0
+importlib-metadata>=6.0.0
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.9
